--- a/csharp/Facebook.CSSLayout.Universal.Tests/Facebook.CSSLayout.Universal.Tests.csproj
+++ b/csharp/Facebook.CSSLayout.Universal.Tests/Facebook.CSSLayout.Universal.Tests.csproj
@@ -129,17 +129,20 @@
       <Name>Facebook.CSSLayout.Universal</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <Target Name="AfterBuild">
     <ItemGroup>
-      <CSSLayoutDll Include="$(SolutionDir)CSSLayout.Universal\bin\$(Platform)\$(Configuration)\CSSLayout.Universal.*" />
+      <CSSLayoutDll Include="$(SolutionDir)CSSLayout.Universal\bin\$(PlatformTarget)\$(Configuration)\CSSLayout.*" />
     </ItemGroup>
     <Copy SourceFiles="@(CSSLayoutDll)" DestinationFolder="$(OutputPath)" ContinueOnError="false" />
     <Copy SourceFiles="@(CSSLayoutDll)" DestinationFolder="$(OutputPath)\AppX" ContinueOnError="false" />
-  </Target>  
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
